Project

General

Profile

Actions

Bug #6955

closed

Unexpected result of BigDecimal('1e-324').to_f on Windows

Bug #6955: Unexpected result of BigDecimal('1e-324').to_f on Windows

Added by phasis68 (Heesob Park) about 14 years ago. Updated about 14 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.0.0dev (2012-08-30 trunk 36856) [i386-mswin32_100]
Backport:
[ruby-core:47381]

Description

After applying r36854, BigDecimal('1e-324').to_f returns "-0.0" instead of "0.0".

C:>ruby -rbigdecimal -ve "p BigDecimal('1e-323').to_f"
ruby 2.0.0dev (2012-08-30 trunk 36856) [i386-mswin32_100]
1.0e-323

C:>ruby -rbigdecimal -ve "p BigDecimal('1e-324').to_f"
ruby 2.0.0dev (2012-08-30 trunk 36856) [i386-mswin32_100]
-0.0

C:>ruby -rbigdecimal -ve "p BigDecimal('1e-325').to_f"
ruby 2.0.0dev (2012-08-30 trunk 36856) [i386-mswin32_100]
0.0

C:>ruby -rbigdecimal -ve "p BigDecimal('1e-326').to_f"
ruby 2.0.0dev (2012-08-30 trunk 36856) [i386-mswin32_100]
0.0

Actions

Also available in: PDF Atom