* ext/bigdecimal/bigdecimal.c (BigDecimal_to_f): use self's sign to   determine 0.0 and Inf's sign instead of internal double value's.   Reported by phasis68 (Heesob Park) at [ruby-core:47381] [Bug #6955]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@36865 b2dd03c8-39d4-4d8f-98ff-823fe69b080e